@@ -1,5 +1,8 @@
 2005-11-01  Kevin P. Fleming  <kpfleming@digium.com>
 
+	* stdtime/localtime.c: fix build failure on uClibc systems (issue #5558)
+	* devicestate.c: same
+
 	* many files: make chan_misdn actually build (issue #5566)
 
 	* many files: more Cygwin build system support (issue #4678)
